finished the header section

--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 <body>
     <header>
         <nav>
-            <h3>Architects</h3>
+            <h3 class="nav-title">Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="">Contact Us</a></li>
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">     
+            <h1 class="banner-title">Brand New <br> Group of Architects</h1>
+            <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem cumque voluptates enim quia libero esse illum mollitia quibusdam eaque at doloribus iure modi minus, fugit nisi. Libero obcaecati totam tempora!</p>
+            <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
 
