--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
         </div>
     </header>
     <main>
-
+        <!-- team section -->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick-list">Quick List</span> <span>Of Our</span> <span class="text-features">Features</span></h3>
+                <p class="teams-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt animi, omnis modi nisi placeat soluta, architecto perspiciatis doloremque neque atque cupiditate, natus itaque asperiores dolorum iusto culpa inventore excepturi esse.</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
