finished team section responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="banner">
             <div class="banner-content">     
             <h1 class="banner-title">Brand New <br> Group of Architects</h1>
-            <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem cumque voluptates enim quia libero esse illum mollitia quibusdam eaque at doloribus iure modi minus, fugit nisi. Libero obcaecati totam tempora!</p>
+            <p class="text-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem cumque voluptates enim quia libero esse illum mollitia quibusdam eaque at doloribus iure modi minus, fugit nisi. Libero obcaecati totam tempora!</p>
             <button class="btn-primary">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
@@ -37,7 +37,7 @@
             </div>
             <div class="teams-content">
                 <h3 class="teams-title"><span class="quick-list">Quick List</span> <span>Of Our</span> <span class="text-features">Features</span></h3>
-                <p class="teams-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt animi, omnis modi nisi placeat soluta, architecto perspiciatis doloremque neque atque cupiditate, natus itaque asperiores dolorum iusto culpa inventore excepturi esse.</p>
+                <p class="text-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt animi, omnis modi nisi placeat soluta, architecto perspiciatis doloremque neque atque cupiditate, natus itaque asperiores dolorum iusto culpa inventore excepturi esse.</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
