--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav-title">Architects</h3>
+            <h3 class="section-title">Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -39,6 +39,36 @@
                 <h3 class="teams-title"><span class="quick-list">Quick List</span> <span>Of Our</span> <span class="text-features">Features</span></h3>
                 <p class="text-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt animi, omnis modi nisi placeat soluta, architecto perspiciatis doloremque neque atque cupiditate, natus itaque asperiores dolorum iusto culpa inventore excepturi esse.</p>
                 <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features-section -->
+        <section class="features">
+        </section>
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolorem cum vero inventore nisi officiis ducimus adipisci! Mollitia sunt provident quod laudantium id ea officiis, natus excepturi nam sit fuga!</p>
+            <div class="facts-card-container">
+                <!-- .card*4>img+h2.card-stats+p.card title text-gray-->
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title">Awards Winning</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1498</h2>
+                    <p class="card-title">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title">Clients worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22550</h2>
+                    <p class="card-title">Email Send</p>
+                </div>
             </div>
         </section>
     </main>
