--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
                 </div>
             </div>
         </section>
+        <!-- sponsor section -->
+        <section class="sponsors">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis deserunt eius eligendi vero <br> quisquam explicabo nisi at nostrum aspernatur, suscipit distinctio quis nihil necessitatibus enim!</p>
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
