ten years card add

--- a/index.html
+++ b/index.html
@@ -43,6 +43,33 @@
         </section>
         <!-- features-section -->
         <section class="features">
+            <div class="feature-content">
+                <h3 class="section-title">Features you will <br>love & enjoy</h3>
+                <p class="text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed cupiditate aliquid ipsa excepturi impedit, sint voluptas vel velit voluptate a fugit perferendis, necessitatibus iure ducimus itaque autem? Tenetur natus velit voluptates, sint magnam, architecto a dolore repellendus neque quisquam voluptatem?</p>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ab, provident sunt qui, expedita non suscipit quibusdam recusandae ducimus illo dolorum veniam enim labore nemo ullam? Deserunt quas voluptas voluptatem unde praesentium esse vero, ducimus at dolore consectetur hic ea sequi, adipisci sint porro, illo accusamus eius! Similique, nulla quasi.</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ab, provident sunt qui, expedita non suscipit quibusdam recusandae ducimus illo dolorum veniam enim labore nemo ullam? Deserunt quas voluptas voluptatem unde praesentium esse vero, ducimus at dolore consectetur hic ea sequi, adipisci sint porro, illo accusamus eius! Similique, nulla quasi.</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ab, provident sunt qui, expedita non suscipit quibusdam recusandae ducimus illo dolorum veniam enim labore nemo ullam? Deserunt quas voluptas voluptatem unde praesentium esse vero, ducimus at dolore consectetur hic ea sequi, adipisci sint porro, illo accusamus eius! Similique, nulla quasi.</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ab, provident sunt qui, expedita non suscipit quibusdam recusandae ducimus illo dolorum veniam enim labore nemo ullam? Deserunt quas voluptas voluptatem unde praesentium esse vero, ducimus at dolore consectetur hic ea sequi, adipisci sint porro, illo accusamus eius! Similique, nulla quasi.</p>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="">
+            </div>
+            <div class="ten-years-badge">
+                <h2>10+ years</h2>
+                <p>Experience</p>
+            </div>
         </section>
         <section class="facts">
             <h3 class="section-title">Some Facts</h3>
