compleate the project

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             </div>
             <div class="feature-img">
                 <img src="images/architect.png" alt="">
-            </div>
-            <div class="ten-years-badge">
-                <h2>10+ years</h2>
-                <p>Experience</p>
+                <div class="ten-years-badge">
+                    <h2>10+years</h2>
+                    <p>Experience</p>
+                </div>
             </div>
         </section>
         <section class="facts">
@@ -110,8 +110,8 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="copy">
+        <p>All rights reserved copyright@2023 Al-Emdad IT Farm</p>
     </footer>
 </body>
 </html>
